force-app/main/default/objects/Skills__c/Skills__c.object-meta.xml
<CustomObject>
    <label>Skill</label>
    <nameField>
        <displayFormat>Skills-{0000}</displayFormat>
        <label>Skills Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>