force-app/main/default/objects/Skills__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (Poor )</fullName>
            </value>
            <value>
                <fullName>2 (Average )</fullName>
            </value>
            <value>
                <fullName>3 (Good )</fullName>
            </value>
            <value>
                <fullName>4 (Very Good)</fullName>
            </value>
            <value>
                <fullName>5 (Excellent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>