force-app/main/default/objects/Skills__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Resources__c</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>