force-app/main/default/objects/Skills__c/fields/Type_of_skills__c.field-meta.xml
<CustomField>
    <fullName>Type_of_skills__c</fullName>
    <label>Type of skills</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Perl</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Apex Code</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Motivation</fullName>
            </value>
            <value>
                <fullName>Approachability</fullName>
            </value>
            <value>
                <fullName>Good teamwork skills</fullName>
            </value>
            <value>
                <fullName>Adaptability</fullName>
            </value>
            <value>
                <fullName>Commercial awareness</fullName>
            </value>
            <value>
                <fullName>HTML, CSS</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Photoshop</fullName>
            </value>
            <value>
                <fullName>Illustrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>