force-app/main/default/objects/Skills__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Category__c</columns>
    <columns>Type_of_skills__c</columns>
    <columns>Rating__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>